--- a/Linktree/index.html
+++ b/Linktree/index.html
@@ -14,16 +14,28 @@
             <img src="imagens/michel.jpg" alt="Michel">
         </picture>
         <h1>MICHEL NEMOTO</h1>
+
+        <div>
+            <ul>
+                <li>&#x1F4A1; Desenvolvedor Front-End</li>
+                <li>&#x1F4A1; Piloto de Drone</li>
+            </ul>
+        </div>
         <nav>
             <p><img src="imagens/Face.png" alt="Facebook"> Meu
                 <a href="https://www.facebook.com/nemoto.michel" target="_blank">Facebook</a>
             </p>
         </nav>
         <nav>
-            <p><img src="imagens/Insta.png" alt="Instagram"> Meu <a href="https://www.instagram.com/michel_nemoto/?hl=pt-br" target="_blank">Instagram</a></p>
+            <p><img src="imagens/Insta.png" alt="Instagram"> Meu <a href="https://www.instagram.com/michel_nemoto/?hl=pt-br" target="_blank" rel="external">Instagram</a></p>
         </nav>
         <nav>
-            <p><img src="imagens/Youtube.png" alt="Youtube"> Meu <a href="https://www.youtube.com/channel/UCy18pBCJVy9GFIQ1xQdJviw" target="_blank">Canal no Youtube</a>
+            <p><img src="imagens/Youtube.png" alt="Youtube"> Meu <a href="https://www.youtube.com/channel/UCy18pBCJVy9GFIQ1xQdJviw" target="_blank" rel="external">Canal no Youtube</a>
+
+            </p>
+        </nav>
+        <nav>
+            <p><img src="imagens/GitHub.png" alt="GitHub"> Meu <a href="https://github.com/Michel-Nemoto" target="_blank" rel="external"> GitHub</a>
 
             </p>
         </nav>
